<resources>
    <string name="app_name">Polar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_links">Enlaces de entrada</string>
    <string name="out_links">Enlaces de salida</string>
    <string name="new_section">Nueva sección</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="new_file">Nueva especificación</string>
    <string name="action_change_team">Cambiar equipo</string>
    <string name="action_config">Configuración</string>
    <string name="action_logout">Salir</string>
    <string name="requirement">Requerimiento</string>
    <string name="title">Titulo</string>
    <string name="subtitle">Subtitulo</string>
    <string name="image">Imagen</string>
    <string name="url">Url</string>
    <string name="space">Espacio</string>
    <string name="navigation_drawer_open">navigation open</string>
    <string name="navigation_drawer_close">navigation close</string>
    <string name="new_image">Nueva imagen</string>
    <string name="choose">Elegir</string>
    <string name="choose_file">Elige el archivo al que desear enlazar este requerimiento</string>

    <string-array
        name="settings_array">
        <item>Cambiar de equipo</item>
        <item>Agregar especificación</item>
        <item>Configuración</item>
        <item>Salir</item>
    </string-array>

    <string-array
        name="move_to_array">
        <item>Insertar arriba</item>
        <item>Insertar abajo</item>
    </string-array>

    <string-array name="types_array">
        <item>Requerimiento</item>
        <item>Titulo</item>
        <item>Subtitulo</item>
        <item>Imagen</item>
        <item>Url</item>
        <item>Espacio</item>
    </string-array>
    <string name="title_activity_link">LinkActivity</string>
    <string name="move_to">Elija donde desea insertar el objeto</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">Este correo es inválido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="not_registered">¿Aún no tienes cuenta?</string>
    <string name="title_activity_register">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Registrarse</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_username">Usuario</string>
    <string name="title_activity_create_team">Equipo de trabajo</string>
    <string name="new_team_header">Crea un nuevo equipo de trabajo con el que podrás agrupar y compartir las especificaciones con respecto a un proyecto</string>
    <string name="prompt_team_name">Nombre del equipo</string>
    <string name="invalid_credentials">Credenciales inválidas</string>
    <string name="username_email_not_available">Correo o nombre de usuario no esta disponible</string>
    <string name="add_team">Agregar un equipo</string>
    <string name="save">Guardar</string>
    <string name="edit_item">Cambio del elemento</string>
</resources>
