<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_requirement" android:title="@string/requirement"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_title" android:title="@string/title"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_subtitle" android:title="@string/subtitle"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_image" android:title="@string/image"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_url" android:title="@string/url"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_space" android:title="@string/space"
        android:orderInCategory="100" app:showAsAction="always" />

</menu>
